<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.HomeFragment">


    <EditText
        android:id="@+id/temp_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="80"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/temp_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/temp_text" />

    <TextView
        android:id="@+id/temp_text"
        style="@style/text_box_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/temp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/hum_text"
        app:layout_constraintEnd_toStartOf="@id/temp_edit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/hum_text"
        style="@style/text_box_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/humidity"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/pm25_text"
        app:layout_constraintEnd_toEndOf="@+id/temp_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp_text" />

    <TextView
        android:id="@+id/pm25_text"
        style="@style/text_box_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/pm25"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/pm10_text"
        app:layout_constraintEnd_toEndOf="@+id/hum_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hum_text" />

    <TextView
        android:id="@+id/pm10_text"
        style="@style/text_box_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/pm10"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/pefr_text"
        app:layout_constraintEnd_toEndOf="@+id/pm25_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pm25_text" />

    <TextView
        android:id="@+id/pefr_text"
        style="@style/text_box_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="200dp"
        android:text="@string/pefr"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/fetch_button"
        app:layout_constraintEnd_toEndOf="@+id/pm25_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pm10_text" />

    <EditText
        android:id="@+id/hum_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="50"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/hum_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/temp_edit" />

    <EditText
        android:id="@+id/pm25_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="2.20"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/pm25_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/temp_edit" />

    <EditText
        android:id="@+id/pm10_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="9.20"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/pm10_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toEndOf="@+id/pm10_text" />

    <EditText
        android:id="@+id/pefr_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="260"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/pefr_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/pm25_edit" />

    <Button
        android:id="@+id/fetch_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/fetch_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/predict_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pefr_text" />

    <Button
        android:id="@+id/predict_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/predict_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/fetch_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fetch_button"
        app:layout_constraintTop_toTopOf="@+id/fetch_button" />

</androidx.constraintlayout.widget.ConstraintLayout>